--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="file:./db.sqlite"
+JWT_SECRET="secret"
