--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "DATABASE_URL='file:./db-testing.sqlite' jest --config ./test/jest-e2e.json",
     "migrate": "prisma migrate dev",
+    "migrate:reset": "prisma migrate reset",
     "studio": "prisma studio"
   },
   "dependencies": {
