--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,11 +12,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - run: cd ./backend
       - uses: actions/setup-node@v3
         with:
           node-version: lts/*
           cache: npm
+          cache-dependency-path: ./backend/package-lock.json
       - run: npm ci
       - run: npm run format-check
       - run: npm run lint
