--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
           node-version: lts/*
           cache: npm
           cache-dependency-path: ./backend/package-lock.json
+      - run: cd backend
       - run: npm ci
       - run: npm run format-check
       - run: npm run lint
