--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,9 @@ on:
 jobs:
   backend:
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: ./backend
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -17,7 +19,6 @@ jobs:
           node-version: lts/*
           cache: npm
           cache-dependency-path: ./backend/package-lock.json
-      - run: cd backend
       - run: npm ci
       - run: npm run format-check
       - run: npm run lint
