--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           node-version: lts/*
           cache: npm
+          cache-dependency-path: ./backend/package-lock.json
       - run: npm ci
       - run: npm run format-check
       - run: npm run lint
