--- a/backend/package.json
+++ b/backend/package.json
@@ -7,17 +7,13 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "npm run lint -- --fix; prettier --cache --ignore-unknown --write --log-level warn '{,!(node_modules)/**/}*'",
-    "format-check": "prettier --cache --ignore-unknown --check '{,!(node_modules)/**/}*'",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "format": "npm run lint -- --fix; prettier . --cache --write --log-level warn",
+    "format-check": "prettier --cache --ignore-unknown --check .",
+    "start": "nest start -b swc",
+    "start:dev": "nest start --watch -b swc",
     "start:prod": "node dist/main",
-    "lint": "eslint . --cache --cache-location node_modules/.cache/.eslintcache --ignore-pattern node_modules/",
+    "lint": "eslint . --ext .ts --cache --cache-location node_modules/.cache/.eslintcache",
     "test": "npm run test:e2e",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "DATABASE_URL='file:./db-testing.sqlite' jest --config ./test/jest-e2e.json",
     "type": "tsc --noEmit",
     "migrate": "prisma migrate dev",
@@ -41,6 +37,8 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.77",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
@@ -49,6 +47,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-unicorn": "^48.0.1",
     "jest": "^29.5.0",
