--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,3 +25,19 @@ jobs:
       - run: npm run lint
       - run: npm run type
       - run: npm run test
+  frontend:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./backend
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: lts/*
+          cache: npm
+          cache-dependency-path: ./frontend/package-lock.json
+      - run: npm ci
+      - run: npm run format-check
+      - run: npm run lint
+      - run: npm run type
