chore(backend): install vuetify, vitest

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -97,13 +97,15 @@
     {
       "files": ["*.{spec,test}.{js,ts}"],
       "rules": {
-        "no-console": "off"
+        "no-console": "off",
+        "unicorn/prefer-module": "off"
       }
     },
     {
       "files": ["*.config.{js,ts}"],
       "rules": {
-        "import/no-default-export": "off"
+        "import/no-default-export": "off",
+        "unicorn/prefer-module": "off"
       }
     }
   ]
