ci(frontend): fix github actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,4 +41,5 @@ jobs:
       - run: npm run format-check
       - run: npm run lint
       - run: npm run type
+      - run: npm run build
       - run: npm run test
