--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,12 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "npm run lint -- --fix; prettier . --cache --write --log-level warn",
+    "format": "npm run lint -- --fix; prettier . --cache --write --log-level warn --ignore-path .gitignore",
     "format-check": "prettier --cache --ignore-unknown --check .",
     "start": "nest start -b swc",
     "start:dev": "nest start --watch -b swc",
     "start:prod": "node dist/main",
-    "lint": "eslint . --ext .ts --cache --cache-location node_modules/.cache/.eslintcache",
+    "lint": "eslint . --ext .ts --cache --cache-location node_modules/.cache/.eslintcache --ignore-path .gitignore",
     "test": "npm run test:e2e",
     "test:e2e": "DATABASE_URL='file:./db-testing.sqlite' jest --config ./test/jest-e2e.json",
     "type": "tsc --noEmit",
