--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,19 +20,18 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@types/node": "^18.17.3",
-    "@vitejs/plugin-vue": "^4.3.2",
     "@vitest/ui": "^0.34.2",
     "@vue/test-utils": "^2.4.1",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
-    "jsdom": "^22.1.0",
+    "happy-dom": "^10.10.4",
     "nuxt": "^3.6.5",
+    "nuxt-vitest": "^0.10.2",
     "openapi-typescript": "^6.5.0",
     "prettier": "^3.0.2",
     "resize-observer-polyfill": "^1.5.1",
-    "unplugin-auto-import": "^0.16.6",
     "vite-plugin-vuetify": "^1.0.2",
-    "vitest": "^0.34.2"
+    "vitest": "^0.33.0"
   },
   "dependencies": {
     "openapi-fetch": "^0.7.4"
