--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "test:e2e": "DATABASE_URL='file:./db-testing.sqlite' jest --config ./test/jest-e2e.json",
     "type": "tsc --noEmit",
     "migrate": "prisma migrate dev",
+    "migrate:deploy": "prisma migrate deploy",
     "migrate:reset": "prisma migrate reset",
     "studio": "prisma studio"
   },
