--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,14 @@
   "devDependencies": {
     "@invictus.codes/nuxt-vuetify": "^0.3.0",
     "@nuxt/devtools": "latest",
-    "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "@nuxt/eslint-config": "^0.1.1",
     "@types/node": "^18.17.3",
     "@vitest/ui": "^0.34.2",
     "@vue/test-utils": "^2.4.1",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-unicorn": "^48.0.1",
     "happy-dom": "^10.10.4",
     "nuxt": "^3.6.5",
     "nuxt-vitest": "^0.10.2",
