--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "lint": "eslint . --ext .ts --cache --cache-location node_modules/.cache/.eslintcache",
+    "lint": "eslint . --ext .ts,.vue --cache --cache-location node_modules/.cache/.eslintcache",
     "format": "npm run lint -- --fix; prettier . --cache --write --log-level warn",
     "format-check": "prettier --cache --ignore-unknown --check .",
     "type": "npx -y nuxi typecheck",
