--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -94,7 +94,9 @@
           "pascalCase": true
         }
       }
-    ]
+    ],
+    "vue/multi-word-component-names": "off",
+    "vue/no-multiple-template-root": "off"
   },
   "overrides": [
     {
