--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@invictus.codes/nuxt-vuetify": "^0.3.0",
     "@nuxt/devtools": "latest",
     "@nuxt/eslint-config": "^0.1.1",
+    "@nuxtjs/google-fonts": "^3.0.2",
     "@types/node": "^18.17.3",
     "@vitest/ui": "^0.34.2",
     "@vue/test-utils": "^2.4.1",
@@ -27,6 +28,7 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-unicorn": "^48.0.1",
     "happy-dom": "^10.10.4",
+    "javascript-time-ago": "^2.5.9",
     "nuxt": "^3.6.5",
     "nuxt-vitest": "^0.10.2",
     "openapi-typescript": "^6.5.0",
