--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "test:open": "vitest --ui"
   },
   "devDependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.6",
     "@invictus.codes/nuxt-vuetify": "^0.3.0",
     "@nuxt/devtools": "latest",
     "@nuxt/eslint-config": "^0.1.1",
