--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "nuxt-vitest": "^0.10.2",
     "openapi-typescript": "^6.5.0",
     "prettier": "^3.0.2",
+    "sweetalert2": "^11.7.27",
     "vite-plugin-vuetify": "^1.0.2",
     "vitest": "^0.33.0"
   },
