--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@nuxt/devtools": "latest",
     "@nuxt/eslint-config": "^0.1.1",
     "@nuxtjs/google-fonts": "^3.0.2",
+    "@nuxtjs/robots": "^3.0.0",
     "@types/node": "^18.17.3",
     "@vitest/ui": "^0.34.2",
     "@vue/test-utils": "^2.4.1",
