--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,15 +22,20 @@
     "@nuxt/eslint-config": "^0.1.1",
     "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtjs/robots": "^3.0.0",
+    "@types/dompurify": "^3.0.2",
     "@types/node": "^18.17.3",
     "@vitest/ui": "^0.34.2",
     "@vue/test-utils": "^2.4.1",
+    "dompurify": "^3.0.5",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-unicorn": "^48.0.1",
     "happy-dom": "^10.10.4",
+    "highlight.js": "^11.8.0",
     "javascript-time-ago": "^2.5.9",
+    "marked": "^8.0.0",
+    "marked-highlight": "^2.0.5",
     "nuxt": "^3.6.5",
     "nuxt-vitest": "^0.10.2",
     "openapi-typescript": "^6.5.0",
